[Navigation] Changed Navigation, removed icon and moved navs to new placces

--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -89,6 +89,23 @@
           "open-url": "",
           "limit": 9
         }
+      },
+      "live-chat": {
+        "type": "live-chat",
+        "settings": {
+          "enable": true,
+          "img_icon": "shopify:\/\/shop_images\/Messenger_Logo_Black_CMYK.png",
+          "href": "https:\/\/m.me\/346703952475439?ref=messenger_commerce_1163199097047119_https:\/\/myfassbender.com\/",
+          "spacing_top": 40,
+          "spacing_bottom": 40,
+          "spacing_left": 40,
+          "spacing_right": 40,
+          "position_xs": "top-right",
+          "position_sm": "previous-sm",
+          "position_md": "previous-md",
+          "position_lg": "bottom-right-lg",
+          "position_xl": "previous-xl"
+        }
       }
     },
     "content_for_index": [
