--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "sass-watch": "nodemon -e scss -x 'npm run sass'",
     "webpack": "webpack",
     "webpack:dev": "webpack --config webpack.config.dev.js",
-    "ts": "npm run webpack && theme upload --dir ./theme assets/bundle.js",
-    "ts:dev": "npm run webpack:dev && theme upload --dir ./theme assets/bundle.js",
+    "ts": "npm run webpack && theme deploy --dir ./theme assets/bundle.js",
+    "ts:dev": "npm run webpack:dev && theme deploy --dir ./theme assets/bundle.js",
     "ts-babel": "babel src/ts/main.ts --extensions '.ts'",
     "ts-watch": "npm run webpack -- --watch",
     "ts-watch:dev": "npm run webpack:dev -- --watch",
@@ -46,21 +46,23 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/plugin-syntax-export-default-from": "^7.2.0",
+    "@babel/plugin-transform-parameters": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-typescript": "^7.1.0",
-    "autoprefixer": "^9.4.4",
+    "autoprefixer": "^9.4.7",
     "babel-loader": "^8.0.5",
     "babel-plugin-array-includes": "^2.0.3",
+    "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babelify": "^10.0.0",
     "browserify": "^16.2.3",
     "clean-css-cli": "^4.2.1",
     "css-flip": "^0.5.0",
-    "css-loader": "^2.0.1",
+    "css-loader": "^2.1.0",
     "csso-cli": "^2.0.2",
     "extract-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -70,46 +72,46 @@
     "gulp-util": "^3.0.8",
     "gulp-zip": "^4.2.0",
     "html-loader": "^0.5.5",
-    "jshint": "^2.9.7",
+    "jshint": "^2.10.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
-    "nodemon": "^1.18.9",
+    "nodemon": "^1.18.10",
     "parcel-bundler": "^1.11.0",
-    "postcss": "^7.0.7",
+    "postcss": "^7.0.14",
     "postcss-cli": "^6.1.1",
     "postcss-loader": "^3.0.0",
     "postcss-modules": "^1.4.1",
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.3",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.2.1",
+    "terser-webpack-plugin": "^1.2.2",
     "ts-loader": "^5.3.3",
     "tsify": "^4.0.1",
-    "tslint": "^5.12.0",
-    "typescript": "^3.2.2",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.3",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.0",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
     "webpack-stream": "^5.2.1",
-    "yargs": "^12.0.5"
+    "yargs": "^13.2.0"
   },
   "dependencies": {
-    "@babel/runtime-corejs2": "^7.2.0",
-    "@ribajs/core": "^0.18.3",
-    "@ribajs/i18n": "^0.18.2",
-    "@ribajs/router": "^0.18.1",
-    "@ribajs/shopify": "^0.18.1",
-    "@ribajs/shopify-tda": "^0.18.0",
+    "@babel/runtime-corejs2": "^7.3.1",
+    "@ribajs/core": "^0.18.5",
+    "@ribajs/i18n": "^0.18.5",
+    "@ribajs/router": "^0.18.5",
+    "@ribajs/shopify": "^0.18.5",
+    "@ribajs/shopify-tda": "^0.18.5",
     "@types/debug": "^0.0.31",
-    "@types/jquery": "^3.3.28",
+    "@types/jquery": "^3.3.29",
     "@types/p-queue": "^3.0.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "debug": "^3.2.6",
     "jquery": "^3.3.1",
     "p-queue": "^3.0.0",
-    "popper.js": "^1.14.6",
-    "rxjs": "^6.3.3"
+    "popper.js": "^1.14.7",
+    "rxjs": "^6.4.0"
   }
 }
