--- a/package.json
+++ b/package.json
@@ -106,14 +106,7 @@
     "@ribajs/router": "^1.2.0",
     "@ribajs/shopify": "^1.2.0",
     "@ribajs/shopify-tda": "^1.2.0",
-    "@types/debug": "^4.1.5",
-    "@types/jquery": "^3.3.31",
-    "@types/p-queue": "^3.2.1",
     "bootstrap": "^4.3.1",
-    "debug": "^4.1.1",
-    "jquery": "^3.4.1",
-    "p-queue": "^6.1.1",
-    "popper.js": "^1.15.0",
-    "rxjs": "^6.5.3"
+    "popper.js": "^1.15.0"
   }
 }
