--- a/package.json
+++ b/package.json
@@ -55,14 +55,14 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-typescript": "^7.6.0",
-    "autoprefixer": "^9.6.1",
+    "autoprefixer": "^9.6.4",
     "babel-loader": "^8.0.6",
     "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
     "clean-css-cli": "^4.3.0",
-    "concurrently": "^4.1.2",
+    "concurrently": "^5.0.0",
     "css-flip": "^0.5.0",
     "css-loader": "^3.2.0",
     "csso-cli": "^2.0.2",
@@ -72,13 +72,13 @@
     "gulp": "^4.0.2",
     "gulp-jsoncombine": "^1.0.4",
     "gulp-util": "^3.0.8",
-    "gulp-zip": "^5.0.0",
+    "gulp-zip": "^5.0.1",
     "html-loader": "^0.5.5",
+    "inspectpack": "^4.2.2",
     "jshint": "^2.10.2",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.3",
-    "parcel-bundler": "^1.12.3",
     "postcss": "^7.0.18",
     "postcss-cli": "^6.1.3",
     "postcss-loader": "^3.0.0",
@@ -97,15 +97,15 @@
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-stream": "^5.2.1",
-    "yargs": "^14.0.0"
+    "yargs": "^14.2.0"
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.6.2",
-    "@ribajs/core": "^1.2.0",
-    "@ribajs/i18n": "^1.2.0",
-    "@ribajs/router": "^1.2.0",
-    "@ribajs/shopify": "^1.2.0",
-    "@ribajs/shopify-tda": "^1.2.0",
+    "@ribajs/core": "^1.2.1",
+    "@ribajs/i18n": "^1.2.1",
+    "@ribajs/router": "^1.2.1",
+    "@ribajs/shopify": "^1.2.1",
+    "@ribajs/shopify-tda": "^1.2.1",
     "bootstrap": "^4.3.1",
     "popper.js": "^1.15.0"
   }
