Added Pinterest tracking with option to disable it

--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -50,12 +50,12 @@
         "type": "live-chat",
         "settings": {
           "enable": true,
-          "img_icon": "shopify:\/\/shop_images\/FBMessenger2.png",
+          "img_icon": "shopify:\/\/shop_images\/Messenger_Logo_White_RGB.svg_12bab5a0-3aa4-4ea5-b32f-f978f19d481d.png",
           "href": "https:\/\/m.me\/346703952475439?ref=messenger_commerce_1163199097047119_https:\/\/myfassbender.com\/",
           "spacing_top": 40,
           "spacing_bottom": 100,
           "spacing_left": 40,
-          "spacing_right": 0,
+          "spacing_right": 40,
           "position_xs": "bottom-right",
           "position_sm": "previous-sm",
           "position_md": "previous-md",
