--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -3,6 +3,8 @@
     "debug": true,
     "googleAnalytics_enabled": true,
     "googleAnalytics_trackingId": "UA-126476233-1",
+    "pinterestTag_enabled": true,
+    "pinterestTag_trackingId": "2613188425032",
     "theTradeDesk_enabled": true,
     "theTradeDesk_adv": "1fqgs22",
     "theTradeDesk_tagId_1": "hqe0lr3",
@@ -51,11 +53,12 @@
         "settings": {
           "enable": true,
           "img_icon": "shopify:\/\/shop_images\/Messenger_Logo_White_RGB.svg_12bab5a0-3aa4-4ea5-b32f-f978f19d481d.png",
+          "image_width": 30,
           "href": "https:\/\/m.me\/346703952475439?ref=messenger_commerce_1163199097047119_https:\/\/myfassbender.com\/",
           "spacing_top": 40,
           "spacing_bottom": 100,
           "spacing_left": 40,
-          "spacing_right": 40,
+          "spacing_right": 30,
           "position_xs": "bottom-right",
           "position_sm": "previous-sm",
           "position_md": "previous-md",
