Added lookbook pages

--- a/theme/assets/favicon-manifest.json
+++ b/theme/assets/favicon-manifest.json
@@ -3,12 +3,12 @@
   "short_name": "Fassbender",
   "icons": [
     {
-      "src": "assets\/favicon-android-chrome-192x192.png",
+      "src": "{{ 'favicon-android-chrome-192x192.png' | asset_url }}",
       "sizes": "192x192",
       "type": "image\/png"
     },
     {
-      "src": "assets\/favicon-android-chrome-512x512.png",
+      "src": "{{ 'favicon-android-chrome-512x512.png' | asset_url }}",
       "sizes": "512x512",
       "type": "image\/png"
     }
