--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fassbender-shopify-theme",
-  "version": "2.0.7",
+  "version": "2.0.8",
   "description": "Shopify theme based on Bootstrap 4",
   "main": "src/ts/main.ts",
   "typings": "src/ts/types",
@@ -67,7 +67,7 @@
     "concurrently": "^5.0.0",
     "css-flip": "^0.5.0",
     "css-loader": "^3.2.0",
-    "csso-cli": "^2.0.2",
+    "csso-cli": "^3.0.0",
     "extract-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.2.0",
@@ -79,7 +79,7 @@
     "inspectpack": "^4.2.2",
     "jshint": "^2.10.2",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "nodemon": "^1.19.4",
     "postcss": "^7.0.18",
     "postcss-cli": "^6.1.3",
@@ -88,8 +88,8 @@
     "sass-loader": "^8.0.0",
     "shelljs": "^0.8.3",
     "style-loader": "^1.0.0",
-    "terser-webpack-plugin": "^2.1.3",
-    "ts-loader": "^6.2.0",
+    "terser-webpack-plugin": "^2.2.1",
+    "ts-loader": "^6.2.1",
     "tsify": "^4.0.1",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4",
@@ -103,12 +103,13 @@
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.6.3",
-    "@ribajs/core": "^1.2.2",
-    "@ribajs/i18n": "^1.2.2",
-    "@ribajs/router": "^1.2.2",
-    "@ribajs/shopify": "^1.2.2",
-    "@ribajs/shopify-tda": "^1.2.2",
+    "@ribajs/bs4": "^1.3.0",
+    "@ribajs/core": "^1.3.0",
+    "@ribajs/i18n": "^1.3.0",
+    "@ribajs/router": "^1.3.0",
+    "@ribajs/shopify": "^1.3.0",
+    "@ribajs/shopify-tda": "^1.3.0",
     "bootstrap": "^4.3.1",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.16.0"
   }
 }
