--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "checkout": "concurrently -k \"npm:checkout:*\"",
     "checkout:js": "uglifyjs checkout/custom-checkout.js -o checkout/custom-checkout.min.js -c -m;",
     "checkout:css": "cleancss checkout/custom-checkout.css -o checkout/custom-checkout.min.css",
-    "packages:link": "npm link @ribajs/core @ribajs/i18n @ribajs/bs4 @ribajs/shopify @ribajs/router @ribajs/shopify-tda"
+    "packages:link": "npm link @ribajs/core @ribajs/i18n @ribajs/bs4 @ribajs/shopify @ribajs/router @ribajs/shopify-tda @ribajs/jquery"
   },
   "repository": {
     "type": "git",
@@ -57,7 +57,7 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
-    "autoprefixer": "^9.6.5",
+    "autoprefixer": "^9.7.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
@@ -81,7 +81,7 @@
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "nodemon": "^1.19.4",
-    "postcss": "^7.0.18",
+    "postcss": "^7.0.21",
     "postcss-cli": "^6.1.3",
     "postcss-loader": "^3.0.0",
     "postcss-modules": "^1.4.1",
@@ -97,18 +97,19 @@
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
+    "webpack-cli": "^3.3.10",
     "webpack-stream": "^5.2.1",
     "yargs": "^14.2.0"
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.6.3",
-    "@ribajs/bs4": "^1.3.0",
-    "@ribajs/core": "^1.3.0",
-    "@ribajs/i18n": "^1.3.0",
-    "@ribajs/router": "^1.3.0",
-    "@ribajs/shopify": "^1.3.0",
-    "@ribajs/shopify-tda": "^1.3.0",
+    "@ribajs/bs4": "^1.4.0",
+    "@ribajs/core": "^1.4.0",
+    "@ribajs/i18n": "^1.4.0",
+    "@ribajs/jquery": "^1.4.0",
+    "@ribajs/router": "^1.4.0",
+    "@ribajs/shopify": "^1.4.0",
+    "@ribajs/shopify-tda": "^1.4.0",
     "bootstrap": "^4.3.1",
     "popper.js": "^1.16.0"
   }
