Upgrade riba and fix build errors (functionality not yet tested)

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "deploy": "npm run build && theme deploy --dir ./theme",
     "deploy:ts": "npm run build:prod:ts && theme deploy --dir ./theme assets/main.bundle.js assets/vendors.main.bundle.js",
     "deploy:sass": "npm run build:prod:sass && theme deploy --dir ./theme assets/bundle.css",
-    "test:ts": "tslint -c tslint.json 'src/**/*.ts' && tsc --noEmit",
+    "test:ts": "eslint src --ext .js,.jsx,.ts,.tsx --fix && tsc --noEmit",
     "test": "npm run test:ts",
     "build": "concurrently \"npm:build:prod:*\"",
     "build:prod:ts": "npm run test:ts && npm run webpack",
@@ -47,70 +47,73 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
-    "@babel/plugin-proposal-export-default-from": "^7.5.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-syntax-export-default-from": "^7.2.0",
-    "@babel/plugin-transform-parameters": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-typescript": "^7.7.2",
-    "autoprefixer": "^9.7.1",
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-export-default-from": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+    "@babel/plugin-syntax-export-default-from": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-typescript": "^7.7.7",
+    "@babel/runtime-corejs3": "^7.7.7",
+    "@typescript-eslint/eslint-plugin": "^2.15.0",
+    "@typescript-eslint/parser": "^2.15.0",
+    "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
     "clean-css-cli": "^4.3.0",
-    "concurrently": "^5.0.0",
+    "concurrently": "^5.0.2",
+    "core-js": "^3.6.2",
     "css-flip": "^0.5.0",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.4.1",
     "csso-cli": "^3.0.0",
     "extract-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^4.2.0",
+    "file-loader": "^5.0.2",
     "gulp": "^4.0.2",
     "gulp-jsoncombine": "^1.0.4",
     "gulp-util": "^3.0.8",
     "gulp-zip": "^5.0.1",
     "html-loader": "^0.5.5",
-    "inspectpack": "^4.2.2",
+    "inspectpack": "^4.3.0",
     "jshint": "^2.10.3",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
-    "nodemon": "^1.19.4",
-    "postcss": "^7.0.21",
-    "postcss-cli": "^6.1.3",
+    "nodemon": "^2.0.2",
+    "postcss": "^7.0.26",
+    "postcss-cli": "^7.1.0",
     "postcss-loader": "^3.0.0",
-    "postcss-modules": "^1.4.1",
+    "postcss-modules": "^1.5.0",
     "sass-loader": "^8.0.0",
     "shelljs": "^0.8.3",
-    "style-loader": "^1.0.0",
-    "terser-webpack-plugin": "^2.2.1",
+    "style-loader": "^1.1.2",
+    "terser-webpack-plugin": "^2.3.2",
     "ts-loader": "^6.2.1",
     "tsify": "^4.0.1",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.2",
+    "eslint": "^6.8.0",
+    "typescript": "^3.7.4",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
-    "webpack": "^4.41.2",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-stream": "^5.2.1",
-    "yargs": "^14.2.0"
+    "yargs": "^15.1.0"
   },
   "dependencies": {
-    "@babel/runtime-corejs2": "^7.7.2",
-    "@ribajs/bs4": "^1.6.1",
-    "@ribajs/core": "^1.6.1",
-    "@ribajs/i18n": "^1.6.1",
-    "@ribajs/jquery": "^1.6.1",
-    "@ribajs/router": "^1.6.1",
-    "@ribajs/shopify": "^1.6.1",
-    "@ribajs/shopify-tda": "^1.6.1",
-    "bootstrap": "^4.3.1",
+    "@ribajs/bs4": "^1.8.0",
+    "@ribajs/core": "^1.8.0",
+    "@ribajs/i18n": "^1.8.0",
+    "@ribajs/jquery": "^1.8.0",
+    "@ribajs/router": "^1.8.0",
+    "@ribajs/shopify": "^1.8.0",
+    "@ribajs/shopify-tda": "^1.8.0",
+    "bootstrap": "^4.4.1",
     "popper.js": "^1.16.0"
   }
 }
