--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "webpack": "webpack --env.production",
     "webpack:dev": "webpack --env.development",
     "deploy": "npm run build && theme deploy --dir ./theme",
-    "deploy:webpack": "npm run build && theme deploy --dir ./theme assets/main.bundle.js assets/vendors.main.bundle.js",
-    "deploy:sass": "npm run manual:build:prod:sass && theme deploy --dir ./theme assets/bundle.css",
+    "deploy:webpack": "npm run build && theme deploy --dir ./theme assets/main.bundle.js assets/vendors.bundle.js assets/main.css",
     "format:ts": "eslint ./src --ext .ts,.tsx --fix && tsc --noEmit",
     "test": "npm run format:ts",
     "build": "npm run format:ts && npm run webpack",
@@ -22,7 +21,6 @@
     "watch": "concurrently \"npm:watch:dev*\"",
     "watch:dev:theme": "theme watch --dir './theme'",
     "watch:dev:webpack": "npm run webpack:dev -- --watch",
-    "manual:watch:sass": "nodemon -e scss -x 'npm run build:prod:sass'",
     "watch:prod": "concurrently \"npm:watch:prod:*\"",
     "watch:prod:theme": "theme watch --dir './theme'",
     "watch:prod:webpack": "npm run webpack -- --watch",
@@ -75,10 +73,10 @@
     "concurrently": "^5.1.0",
     "core-js": "^3.6.5",
     "css-flip": "^0.5.0",
-    "css-loader": "^3.5.2",
+    "css-loader": "^3.5.3",
     "csso-cli": "^3.0.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "extract-loader": "^5.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -91,16 +89,16 @@
     "inspectpack": "^4.4.0",
     "jshint": "^2.11.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
     "postcss": "^7.0.27",
     "postcss-cli": "^7.1.0",
     "postcss-loader": "^3.0.0",
     "postcss-modules": "^2.0.0",
-    "prettier": "^2.0.4",
+    "prettier": "^2.0.5",
     "sass-loader": "^8.0.2",
     "shelljs": "^0.8.3",
-    "style-loader": "^1.1.4",
+    "style-loader": "^1.2.0",
     "terser-webpack-plugin": "^2.3.5",
     "tsify": "^4.0.1",
     "typescript": "^3.8.3",
